tests/NormalTests/paczka1/fuzzy1/52592282.err
Error in line 2: 4P0bae5Hbh A541 4,62
Error in line 1: 5wO A541 9,3
Error in line 14: A541 S540 76,94
Error in line 15: 5wO A194 91,8
Error in line 10: A541 A194 3,7
Error in line 17: A541 S540 5,3
Error in line 16: 5wO S557 36,7
Error in line 19: A541 S557 54,6
Error in line 3: 4P0bae5Hbh A541 6,8
Error in line 20: 5wO A541 73,0
